[tool.poetry]
name = "rorschach-warehouse"
version = "0.1.0"
description = ""
authors = ["Dante Devenir <dantedevenir@outlook.com>"]
readme = "README.md"
packages = [
        {include = "components", from = "rorschach_warehouse"},
        {include = "models", from = "rorschach_warehouse"},
        {include = "migrations", from = "rorschach_warehouse"},
        {include = "core", from = "rorschach_warehouse"},
        {include = "db", from = "rorschach_warehouse/core"},
        {include = "mapping", from = "rorschach_warehouse/core"},
        {include = "settings", from = "rorschach_warehouse/core"},
]

[tool.poetry.dependencies]
python = "3.12.4"
pandas = "^2.2.2"
nite_howl = "0.1.29"
sqlalchemy = "^2.0.35"
SQLAlchemy_Utils = "^0.41.2"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"
alembic = "^1.13.2"
alembic-utils = "^0.8.4"
alembic_postgresql_enum = "^1.3.0"
toml = "^0.10.2"

[[tool.poetry.source]]
name = "nite-howl"
url = "https://pkgs.dev.azure.com/dantedevenir/rorschach/_packaging/nite-howl/pypi/simple"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ipykernel = "^6.29.5"
mypy = "^1.11.1"
types-toml = "^0.10.8"
pandas_stubs = "^2.2.2"
types_requests = "^2.32.0"
pylint = "^3.2.6"

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"